fixed margin, padding and alignment on the event component

--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -5,20 +5,23 @@
   display: flex;
   align-items: center;
   font-family: "Josefin sans";
+  padding: 0.5rem;
 }
 
 .date {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   color: #00675b;
+  width: 10rem;
+  padding-left: 2rem;
 }
 
 .dateNumber {
   font-family: "Cardo";
   font-size: 2.5rem;
   color: #c1dad7;
+  margin: -0.5rem 0;
 }
 
 .eventText {
